--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "live-server": "^1.0.0"
+  },
+  "dependencies": {
+    "js": "^0.1.0",
+    "require": "^2.4.20"
   }
 }
